# rust_crm

./: .env  Cargo.toml  Rocket.toml
src/: config.rs  main.rs
