[package]
name = "rust_crm"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
postgres = "0.19.2"
diesel = { version = "1.4.4", features = ["postgres"] }
#diesel_migrations = "1.4.0"
dotenv = "0.15.0"
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.44"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json", "diesel_postgres_pool"]